lista de figuras y dee tablas

--- a/informe.tex
+++ b/informe.tex
@@ -27,9 +27,9 @@
 \vspace{1cm}
 {\scshape\Large Simulaci\'on de Sistemas \par}
 \vspace{3cm}
-{\scshape\Huge Aut\'omatas Celulares Off-Lattice\par}
+{\scshape\Huge COVID-19\par}
 \vspace{3cm}
-{\itshape\Large Trabajo Pr\'actico 2 \par}
+{\itshape\Large Trabajo Pr\'actico Final \par}
 \vfill
 {\Large Autores: \par}
 {\Large Tomas Bacigalupo, Lucio Pagni\par}
@@ -38,7 +38,14 @@
 \end{titlepage}
 \clearpage
 
+\listoffigures   % generate list of figures
+\clearpage
+
+\listoftables % generate list of tables    
+ \clearpage
+
 \tableofcontents
+\clearpage
 
 \section{Introducción}
 texto
