agrego figuras con referencias

--- a/informe.tex
+++ b/informe.tex
@@ -40,7 +40,6 @@
 
 \listoffigures   % generate list of figures
 \clearpage
-
 \listoftables % generate list of tables    
  \clearpage
 
@@ -48,10 +47,18 @@
 \clearpage
 
 \section{Introducción}
-texto
+Se trabajo durante la segunda mitad del cuatrimestre en un software de simulación de personas comprando en un supermercado. Nuestro trabajo en el desarrollo fue el de estructurar el proyecto y desarrollar el modulo de la caja que consta de atender clientes y encolarlos en la fila correcta. Por otro lado el trabajo de estructura nos llevo a tomar decisiones como desarrollos de pom.xml con sus respectivas dependencias en cada modulo y como tarea principal se implementaron todos los módulos a travez de un main que permitía mediante un archivo de configuración establecer las variables de la simulación. Y es en este momento donde comienza nuestro trabajo de desarrollo para esta entrega final, donde se mejoraron los tiempos de simulación mediante la mejora de nuestros dos módulos: Main y Caja
 
 \section{Implementación}
-texto
+En cuanto a la estructura, luego de varias idas y vueltas de los distintos grupos de trabajo se opto por una implementación simple de Interfaces e Implementaciones, con el objetivo de programar contra interfaces como se puede ver en la figura \ref{grafico}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=4in]{./images/inputVsOutput.jpeg}
+\caption{Ejemplo aca va la descripcion }
+\label{grafico}
+\end{center}
+\end{figure}
 
 \section{Simulaciones}
 texto
