agrego imagenes utiles de uml

--- a/informe.tex
+++ b/informe.tex
@@ -106,7 +106,7 @@ texto
 \clearpage
 
 \section{Tablas}
-\begin{table}
+\begin{table}[h]
 \begin{center}
 \begin{tabularx}{0.8\textwidth} { 
   | >{\raggedright\arraybackslash}X 
