--- a/informe.tex
+++ b/informe.tex
@@ -14,7 +14,7 @@
 
 \author{Tomás Bacigalupo , Lucio Pagni}
 \date{\today}
-\author{Tomas Bacigalupo y Lucio Pagni}
+\author{Tomás Bacigalupo y Lucio Pagni}
 \date{18/07/2020} % delete this line to display the current date
 
 %%% BEGIN DOCUMENT
@@ -32,7 +32,7 @@
 {\itshape\Large Trabajo Pr\'actico Final \par}
 \vfill
 {\Large Autores: \par}
-{\Large Tomas Bacigalupo, Lucio Pagni\par}
+{\Large Tomás Bacigalupo, Lucio Pagni\par}
 \vfill
 {\Large \today \par}
 \end{titlepage}
@@ -47,15 +47,58 @@
 \clearpage
 
 \section{Introducción}
-Con el objetivo de estudiar el problema de distanciamiento social en el contexto de la pandemia mundial del covid-19 se trabajo durante la segunda mitad del cuatrimestre en un software de simulación de peatones comprando en un supermercado.Dicho software busca ser más poderoso y configurable que otras versiones comerciales, las cuales usamos como referencia. Nuestro trabajo en el desarrollo fue el de estructurar el proyecto, implementar el main (del cual se desencadenan las llamadas a todos los demás módulos),  y desarrollar el modulo de la caja, cuya tarea es la  de atender clientes y encolarlos en la fila correcta. Por otro lado el trabajo de estructura nos llevo a tomar decisiones como desarrollos de pom.xml con sus respectivas dependencias en cada modulo y como tarea principal se implementaron todos los módulos a travez de un main que permitía mediante un archivo de configuración establecer las variables de la simulación. Y es en este momento donde comienza nuestro trabajo de desarrollo para esta entrega final, donde se mejoraron los tiempos de simulación mediante la mejora de nuestros dos módulos: Main y Caja
+
+\paragraph{}
+Con el objetivo de estudiar el problema de distanciamiento social en el contexto de la pandemia mundial del covid-19 se trabajo durante la segunda mitad del cuatrimestre en un software de simulación de peatones comprando en un supermercado.Dicho software busca ser más poderoso y configurable que otras versiones comerciales, las cuales usamos como referencia. 
+
+\paragraph{}
+Nuestro trabajo en el desarrollo fue el de estructurar el proyecto, implementar el main (del cual se desencadenan las llamadas a todos los demás módulos),  y desarrollar el modulo de la caja, cuya tarea es la  de atender clientes y encolarlos en la fila correcta.
+
+\paragraph{}
+Por otro lado el trabajo de estructura nos llevo a tomar decisiones como desarrollos de pom.xml con sus respectivas dependencias en cada modulo y como tarea principal se implementaron todos los módulos a travez de un main que permitía mediante un archivo de configuración establecer las variables de la simulación. Y es en este momento donde comienza nuestro trabajo de desarrollo para esta entrega final, donde se mejoraron los tiempos de simulación mediante la mejora de nuestros dos módulos: Main y Caja
+
+\subsection{Main}
+
+\paragraph{}
+La idea básica del main consiste en recorrer la lista de agentes y actualizarlos. Una vez que se actualizan todos, se actualiza la lista de agentes anterior por la nueva lista de agentes. Otra responsabilidad del main es guardar el estado del sistema, esto se hace
+cada cierto dt2 el cual es independiente del dt de simulación. Se guarda el id de los agentes y las variables de estado de todos los agentes. Por último el main también debe levantar un archivo de configuración.
+
+\subsection{Módulo Fila}
+
+\paragraph{}
+El módulo de fila se descompone en N cajas las cuales tienen 2 cajeros cada una. Tiene una capacidad máxima max, una distancia social d y una distancia H a un punto p sub i el cual parametriza la posición de las cajas.
+\paragraph{}
+La parametrización geometrica se hizo lo mas general posible para poder adapatarnos a la hora de llamar al módulo de geometría y poder usar el retorno para asignar los parámetros de nuestra implementación.
+\paragraph{}
+El módulo provee una API pensada para la máquina de estados.
+
+\section{Fundamentos}
+
+\subsection{Input}
+
+\paragraph{}
+El módulo file obtiene sus inputs del módulo geometría. Obtiene de este módulo las posiciones de los lugares de pago.
+
+\subsection{Output}
+\paragraph{}
+El output del módulo fila se obtiene mediante su API , esto es, mediante su interfaz. Llamando a estos métodos se obtienen los estados internos de caja. El rol del módulo caja es representar mediante estructuras y algoritmos internos los estados y manejar
+según la lógica planteada, los agentes los cuales manipula.
+\paragraph{}
+En cuanto al módulo main, sus outputs son archivos en los cuales se persisten información relevante de los agentes segun el dt2. La información persistida en memoria mediante archivos contiene información como el id del agente, sus variables de estado 
+(posición , velocidad) y el estado en el cual se encuentra. Esto perminte un posterior procesamiento de los datos.
 
 \section{Implementación}
 
 \paragraph{}
 En esta sección discutiremos todos los aspectos que hacen a la implementación del simulador y la justificación de las decisiones tomadas, tanto de diseño de clases como de diseño de arquitectura.
 
-\subsubsection{La estructura general del proyecto}
+\subsection{Estructura, herramientas y frameworks}
+\paragraph{}
+El lenguaje de programación utilizado es Java , versión 8. Se utilizó JUnit como framework de testing, para tener cierto nivel de confianza y seguridad en el código implementado. Para estructurar los archivos del proyecto se utilizo la herramienta maven. Para visualizar durante la etapa de desarrollo se utilizo ovito y también un animador en python.
 
+\subsection{La estructura general del proyecto}
+
+\paragraph{}
 En cuanto a la estructura, se optó por una implementación simple de Interfaces e Implementaciones, con el objetivo de programar contra interfaces como se puede ver en la figura \ref{grafico}. 
 
 \paragraph{}
@@ -64,32 +107,60 @@ Incialmente la estructura propuesta consistía en una serie de módulos,intercon
 \paragraph{}
 En el momento de diagramar el main de la simulación, se hizo un uso intensivo de esta estructura y sus convenciones. Otra ventaja es que nos permite cumplir con los requerimientos impuestos con la cátedra de generar un archivo ejecutable .jar. Una de las bondades de la arquitectura de la implementación es que nos permite obtener dicho ejecutable realizando 'mvn clean package' en la terminal.
 
-\subsubsection{El problema de la configuración}
-
-El simulador debe ser altamente configurable, para esto se implementó una clase aparte llamada ReadConf.java la cual tiene la responsabilidad de leer el archivo de configuración config.properties y servir dichos valores mediante sus variables, las cuales son accesibles desde cualquier clase del proyecto.
-
-\subsubsection{Programación contra interfaces}
+\subsection{La implementación del tiempo en el Main}
 
 \paragraph{}
-Como se mencionó anteriormente, es importante poder programar contra interfaces. No solo es muy importante que cada módulo honre correctamente sus interfaces, sino que estas estén bien diseñadas de manera que se abarque el problema de manera completa. Además, se debe tener cuidado de no exponer estado interno de una clase de manera innecesaria. Veremos la justificación de diseño de la interfaz Caja
+Dentro de las responsabilidades del main también encontramos la responsabilidad de generar archivos cada cierto dt2. El tiempo en el main se acumula en la variable time y se incrementa el dt en cada iteración. El módulo caja opera según este tiempo, en cada llamada se incrementa el tiempo para la caja también.
+
+\subsection{Problemas surgidos durante la integración}
+
+\paragraph{}
+En un primer momento se resolvió el problema de la caja de manera aislada. Cuando se llevo a cabo la integración surgieron algunos inconvenientes los cuales pasamos a mencionar.
+
+
+\subsection{El problema de la configuración}
+
+\paragraph{}
+El simulador debe ser altamente configurable, para esto se implementó una clase aparte llamada ReadConf.java la cual tiene la responsabilidad de leer el archivo de configuración config.properties y servir dichos valores mediante sus variables, las cuales son accesibles desde cualquier clase del proyecto.
+
+\subsection{Programación contra interfaces}
+
+\paragraph{}
+Como se mencionó anteriormente, es importante poder programar contra interfaces.No solo es muy importante que cada módulo honre correctamente sus interfaces, sino que estas estén bien diseñadas de manera que se abarque el problema de manera completa. Además, se debe tener cuidado de no exponer estado interno de una clase de manera innecesaria. Veremos la justificación de diseño de la interfaz Caja
 
 \paragraph{}
 Se expone estado interno de la caja innecesariamente? Por un lado, es verdad que lo mejor sería llamar a cajas.add(agent), o un método del estilo. Sin embargo esto no cubre la complejidad del problema a resolver, esto es porque se deben hacer varias consultas al estado interno de caja antes de insertar definitivamente un agente en la fila. La interfaz de la fila no solo debe darle varios datos a la máquina de estado sino que también debe otorgarlos en instantes distintos del tiempo. Es por eso que la fila provee información que indica a que caja ir y a que posición de cada caja debe ir. Este diseño le permite a la máquina de estados preguntar tantas veces como sea necesario. Además si retornamos unicamente una posición y no el indice de la caja, no estaríamos teniendo en cuanta si su lugar fue ocupado antes por otro agente. En definitiva, los datos expuestos son para que la máquina de estados tenga mas granularidad a la hora de elegir a donde ir y como llegar.
 
 \section{Simulaciones}
+\paragraph{}
 Las simulaciones podemos dividirlas en tres grandes grupos. Por un lado se tienen las simulaciones iniciales, en las cuales el módulo caja es solo un boceto. En estas simulaciones se plantea el esquema básico del problema a resolver por el módulo de caja.
-Luego se tienen las simulaciones intermedias, estas son, todas las simulaciones que se llevaron a cabo con el simulador integrado. De estas últimas las más importantes son las entregadas para el TP6. Por último se tienen las simulaciones realizadas para evaluar
-la mejora en el tiempo de ejecución.
+Luego se tienen las simulaciones intermedias, estas son, todas las simulaciones que se llevaron a cabo con el simulador integrado. De estas últimas las más importantes son las entregadas para el TP6. Por último se tienen las simulaciones realizadas para evaluar la mejora en el tiempo de ejecución.
+
+\subsection{Simulaciones con el módulo de caja aisaldo}
+
+\paragraph{}
+Las simulaciones que se efectuaron con el simulador de cajas aislados se corrieron con 8 cajas, una separación entre ellas de 20 mts, una capacidad máxima de 8 personas, una distancia H de 8 y una distancia social de 2 mts.
+
+
 
 \section{Resultados}
+\paragraph{}
 Los resultados discutidos en esta sección hacen referencia a las simulaciones realizadas para evaluar la mejora en el tiempo de ejecución.
 Los resultados de las simulaciones antes de las mejoras se pueden ver en la tabla \ref{tablaAntes}.
 Los resultados de las simulaciones despue\'es de las mejoras se pueden ver en la tabla \ref{tablaDespues}.
 
 \section{Concluciones}
-Observando los resultados podemos concluir que las mejoras realizadas en el código lograron el objetivo de disminuir el tiempo de ejecución.
+\paragraph{}
+Observando los resultados podemos concluir que las mejoras realizadas en el código lograron el objetivo de disminuir el tiempo de ejecución. Atrevemos esta conclusión ya que si observamos el promedio de todas las corridas hechas antes de las mejoras y las
+comparamos contra los promedios de las corridas después de hechas las mismas observamos que para todo N el promedio de los tiempos de ejecución observamos que estos disminuyen una ve que se hicieron las mejoras.
+
+\section{Agradecimientos}
+\paragraph{}
+No queremos terminar sin agradecer una vez más a los profesores por el voto de confianza que pusieron en los alumnos. También a nuestros compañeros por informarnos cada problema que surgió de la caja y por tenerlos la paciencia para
+ayudarnos con cada problema surgido durante la integración del simulador.
 
 \section{Apéndice}
+\paragraph{}
 texto
 
 \clearpage
