agrego formato tablas

--- a/informe.tex
+++ b/informe.tex
@@ -184,7 +184,7 @@ Los resultados de las simulaciones despue\'es de las mejoras se pueden ver en la
 \section{Conclusiones}
 \paragraph{}
 Observando los resultados podemos concluir que las mejoras realizadas en el código lograron el objetivo de disminuir el tiempo de ejecución. Atrevemos esta conclusión ya que si observamos el promedio de todas las corridas hechas antes de las mejoras y las
-comparamos contra los promedios de las corridas después de hechas las mismas observamos que para todo N el promedio de los tiempos de ejecución observamos que estos disminuyen una ve que se hicieron las mejoras.
+comparamos contra los promedios de las corridas después de hechas las mismas observamos que para todo N el promedio de los tiempos de ejecución observamos que estos disminuyen una vez que se hicieron las mejoras.
 
 \section{Agradecimientos}
 \paragraph{}
@@ -280,6 +280,78 @@ total & 1200  \\
 \hline
 \end{tabularx}
 \caption{Parámetros del simulador integrado}
+\label{referencia:5}
+\end{center}
+\end{table}
+
+\begin{table}[h]
+\begin{center}
+\begin{tabularx}{0.8\textwidth} { 
+  | >{\raggedright\arraybackslash}X 
+  | >{\centering\arraybackslash}X 
+  | >{\raggedleft\arraybackslash}X | }
+ \hline
+Nro. de Agentes & Promedio & Desviación Estandar \\
+ \hline
+8 & 0 & 0 \\
+\hline
+17 & 0 & 0 \\
+\hline
+26 & 0 & 0 \\
+\hline
+35 & 0 & 0 \\
+\hline
+44 & 0 & 0 \\
+\hline
+53 & 0 & 0 \\
+\hline
+62 & 0 & 0 \\
+\hline
+71 & 0 & 0 \\
+\hline
+80& 0 & 0 \\
+\hline
+89 & 0 & 0 \\
+\hline
+
+\end{tabularx}
+\caption{tablaAntes}
+\label{referencia:5}
+\end{center}
+\end{table}
+
+\begin{table}[h]
+\begin{center}
+\begin{tabularx}{0.8\textwidth} { 
+  | >{\raggedright\arraybackslash}X 
+  | >{\centering\arraybackslash}X 
+  | >{\raggedleft\arraybackslash}X | }
+ \hline
+Nro. de Agentes & Promedio & Desviación Estandar \\
+ \hline
+8 & 0 & 0 \\
+\hline
+17 & 0 & 0 \\
+\hline
+26 & 0 & 0 \\
+\hline
+35 & 0 & 0 \\
+\hline
+44 & 0 & 0 \\
+\hline
+53 & 0 & 0 \\
+\hline
+62 & 0 & 0 \\
+\hline
+71 & 0 & 0 \\
+\hline
+80& 0 & 0 \\
+\hline
+89 & 0 & 0 \\
+\hline
+
+\end{tabularx}
+\caption{tablaDespues}
 \label{referencia:5}
 \end{center}
 \end{table}
