fix de referencias a tablas y agrago imagenes como figuras

--- a/informe.tex
+++ b/informe.tex
@@ -196,6 +196,7 @@ ayudarnos con cada problema surgido durante la integración del simulador.
 texto
 
 \clearpage
+
 \section{Figuras}
 \begin{figure}[h]
 \begin{center}
@@ -204,6 +205,48 @@ texto
 \label{grafico}
 \end{center}
 \end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=4in]{./images/claseCajaImpl.PNG}
+\caption{UML implementación de Caja }
+\label{cajaImpl}
+\end{center}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=4in]{./images/interfaceCaja.PNG}
+\caption{UML interface de Caja }
+\label{interfaceCaja}
+\end{center}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=4in]{./images/interfaceGeometry.PNG}
+\caption{UML interface de Geometry }
+\label{interfaceGeomety}
+\end{center}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=4in]{./images/claseCajero.PNG}
+\caption{UML implementación de Cajero }
+\label{claseCajero}
+\end{center}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=4in]{./images/parametrosSuper.PNG}
+\caption{Explicación de parámetros del módulo}
+\label{supermercado}
+\end{center}
+\end{figure}
+
+
 \clearpage
 
 \section{Tablas}
@@ -316,7 +359,7 @@ Nro. de Agentes & Promedio & Desviación Estandar \\
 
 \end{tabularx}
 \caption{tablaAntes}
-\label{referencia:5}
+\label{table:tablaAntes}
 \end{center}
 \end{table}
 
@@ -351,8 +394,8 @@ Nro. de Agentes & Promedio & Desviación Estandar \\
 \hline
 
 \end{tabularx}
-\caption{tablaDespues}
-\label{referencia:5}
+\caption{table:tablaDespues}
+\label{tablaDespues}
 \end{center}
 \end{table}
 
